# 2023-JCO-Airtime

./: CMakeLists.txt  README.md
doc/: UML.mdj  UML_classes.mdj
res/Levels/: level2.json  mainLevel.json
res/pixelart/: base-player.pixil  dash.pixil  dumpster.pixil  idle-flipped.pixil  idle.pixil  oneside-platform.pixil  start-run.pixil  walk-flipped.pixil  walk.pixil
scripts/: _generate_new_project.ps1  generate_cmake_release.bat  generate_release.bat
src/: 2023-JCO-Airtime.pro  AdvancedCollisionSprite.cpp  AdvancedCollisionSprite.h  AnimatedSprite.cpp  AnimatedSprite.h  Collectible.cpp  Collectible.h  DashRefill.cpp  DashRefill.h  DirectionalEntityCollider.cpp  DirectionalEntityCollider.h  DirectionalEntityCollision.cpp  DirectionalEntityCollision.h  Doxyfile  LevelLoader.cpp  LevelLoader.h  LevelTrigger.cpp  LevelTrigger.h  MovingPlatform.cpp  MovingPlatform.h  Particle.cpp  Particle.h  PhysicsEntity.cpp  PhysicsEntity.h  Player.cpp  Player.h  PlayerTickHandler.cpp  PlayerTickHandler.h  gamecanvas.cpp  gamecanvas.h  gamecore.cpp  gamecore.h  gameview.cpp  gameview.h  main.cpp  mainfrm.cpp  resources.cpp  resources.h  sprite.cpp  sprite.h
